[gd_scene load_steps=14 format=3 uid="uid://c55kgiasyjjl3"]

[ext_resource type="Script" path="res://UI/Titlescreen/Scripts/Play Btn.gd" id="1_0dln6"]
[ext_resource type="Script" path="res://UI/Titlescreen/Scripts/titlescreen.gd" id="1_1mxfy"]
[ext_resource type="Script" path="res://UI/Titlescreen/Scripts/Exit Btn.gd" id="2_d15mu"]
[ext_resource type="Texture2D" uid="uid://cjt23glg3pcl2" path="res://Art/Hideo Poster.png" id="2_offsk"]
[ext_resource type="Script" path="res://UI/Titlescreen/Scripts/Option Btn.gd" id="2_q7u70"]
[ext_resource type="Texture2D" uid="uid://dkmtnqe12nkoq" path="res://Art/Mel Poster.png" id="3_xsejx"]
[ext_resource type="AudioStream" uid="uid://818cqyvvccox" path="res://Music/KenThemeSNES(320).mp3" id="7_hqg2o"]

[sub_resource type="SystemFont" id="SystemFont_b2rks"]
font_names = PackedStringArray("Arial")
multichannel_signed_distance_field = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ri6kv"]
size = Vector2(600, 99)

[sub_resource type="SystemFont" id="SystemFont_tshhf"]
font_names = PackedStringArray("Arial")
multichannel_signed_distance_field = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5m1m"]
size = Vector2(600, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fbslj"]
size = Vector2(600, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8wlul"]

[node name="Titlescreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mxfy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.447059, 0.345098, 0.823529, 1)

[node name="HideoPoster" type="Sprite2D" parent="ColorRect"]
position = Vector2(232.75, 533.51)
scale = Vector2(1.33086, 1.33086)
texture = ExtResource("2_offsk")

[node name="MelPoster" type="Sprite2D" parent="ColorRect/HideoPoster"]
position = Vector2(1089.58, 3.75699)
texture = ExtResource("3_xsejx")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 457.0
offset_top = 96.0
offset_right = 1462.0
offset_bottom = 277.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 130
text = "COLLEGE C"

[node name="Label" type="Label" parent="Label"]
auto_translate_mode = 1
layout_mode = 0
offset_left = 599.0
offset_right = 1006.0
offset_bottom = 181.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 130
text = "CLASH"

[node name="HBox Buttons Containers" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 448.0
offset_top = -230.0
offset_right = 1443.0
offset_bottom = 230.0
grow_vertical = 2
alignment = 1

[node name="VBox Buttons Containers" type="VBoxContainer" parent="HBox Buttons Containers"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="HBox Buttons Containers/VBox Buttons Containers"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = SubResource("SystemFont_b2rks")
theme_override_font_sizes/font_size = 80
text = "PLAY"
script = ExtResource("1_0dln6")

[node name="Area2D" type="Area2D" parent="HBox Buttons Containers/VBox Buttons Containers/Play"]
collision_layer = 65536
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBox Buttons Containers/VBox Buttons Containers/Play/Area2D"]
position = Vector2(300, 49.5)
shape = SubResource("RectangleShape2D_ri6kv")

[node name="Option" type="Button" parent="HBox Buttons Containers/VBox Buttons Containers"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = SubResource("SystemFont_tshhf")
theme_override_font_sizes/font_size = 70
disabled = true
text = "OPTIONS"
script = ExtResource("2_q7u70")

[node name="Area2D" type="Area2D" parent="HBox Buttons Containers/VBox Buttons Containers/Option"]
collision_layer = 65536
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBox Buttons Containers/VBox Buttons Containers/Option/Area2D"]
position = Vector2(300, 50)
shape = SubResource("RectangleShape2D_t5m1m")

[node name="Exit" type="Button" parent="HBox Buttons Containers/VBox Buttons Containers"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = SubResource("SystemFont_tshhf")
theme_override_font_sizes/font_size = 70
text = "EXIT"
script = ExtResource("2_d15mu")

[node name="Area2D" type="Area2D" parent="HBox Buttons Containers/VBox Buttons Containers/Exit"]
collision_layer = 65536
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="HBox Buttons Containers/VBox Buttons Containers/Exit/Area2D"]
position = Vector2(300, 49)
shape = SubResource("RectangleShape2D_fbslj")

[node name="Pointer" type="Area2D" parent="."]
position = Vector2(500, 538)
collision_layer = 524288
collision_mask = 65536

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pointer"]
shape = SubResource("RectangleShape2D_8wlul")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_hqg2o")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_top = 944.0
offset_right = 1920.0
offset_bottom = 1081.0
theme_override_font_sizes/font_size = 100
text = "♖♝♘♟♕♚                                ♚♕♟♘♝♖"

[connection signal="focus_entered" from="HBox Buttons Containers/VBox Buttons Containers/Play" to="HBox Buttons Containers/VBox Buttons Containers/Play" method="_on_SinglePlayerButton_focus_entered"]
[connection signal="focus_exited" from="HBox Buttons Containers/VBox Buttons Containers/Play" to="HBox Buttons Containers/VBox Buttons Containers/Play" method="_on_SinglePlayerButton_focus_exited"]
[connection signal="pressed" from="HBox Buttons Containers/VBox Buttons Containers/Play" to="HBox Buttons Containers/VBox Buttons Containers/Play" method="_on_pressed"]
[connection signal="area_entered" from="HBox Buttons Containers/VBox Buttons Containers/Play/Area2D" to="HBox Buttons Containers/VBox Buttons Containers/Play" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="HBox Buttons Containers/VBox Buttons Containers/Play/Area2D" to="HBox Buttons Containers/VBox Buttons Containers/Play" method="_on_Area2D_area_exited"]
[connection signal="focus_entered" from="HBox Buttons Containers/VBox Buttons Containers/Option" to="HBox Buttons Containers/VBox Buttons Containers/Option" method="_on_OptionsButton_focus_entered"]
[connection signal="focus_exited" from="HBox Buttons Containers/VBox Buttons Containers/Option" to="HBox Buttons Containers/VBox Buttons Containers/Option" method="_on_OptionsButton_focus_exited"]
[connection signal="pressed" from="HBox Buttons Containers/VBox Buttons Containers/Option" to="HBox Buttons Containers/VBox Buttons Containers/Option" method="_on_pressed"]
[connection signal="area_entered" from="HBox Buttons Containers/VBox Buttons Containers/Option/Area2D" to="HBox Buttons Containers/VBox Buttons Containers/Option" method="_on_Area_2d_area_entered"]
[connection signal="area_exited" from="HBox Buttons Containers/VBox Buttons Containers/Option/Area2D" to="HBox Buttons Containers/VBox Buttons Containers/Option" method="_on_area_2d_area_exited"]
[connection signal="focus_entered" from="HBox Buttons Containers/VBox Buttons Containers/Exit" to="HBox Buttons Containers/VBox Buttons Containers/Exit" method="_on_QuitButton_focus_entered"]
[connection signal="focus_exited" from="HBox Buttons Containers/VBox Buttons Containers/Exit" to="HBox Buttons Containers/VBox Buttons Containers/Exit" method="_on_QuitButton_focus_exited"]
[connection signal="pressed" from="HBox Buttons Containers/VBox Buttons Containers/Exit" to="HBox Buttons Containers/VBox Buttons Containers/Exit" method="_on_pressed"]
[connection signal="area_entered" from="HBox Buttons Containers/VBox Buttons Containers/Exit/Area2D" to="HBox Buttons Containers/VBox Buttons Containers/Exit" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="HBox Buttons Containers/VBox Buttons Containers/Exit/Area2D" to="HBox Buttons Containers/VBox Buttons Containers/Exit" method="_on_area_2d_area_exited"]
